# picones

./: .gitignore  .gitmodules  BadApple.asm  BadAppleSongMapped copy.s  BadAppleSongMapped.s  CMakeLists.txt  README.md  TODO.md  config.cfg  generate_rom_header.py
BadAppleSrc/audio/: BadAppleSongMapped.dmc  badapple.nsf  chunkbadapple.py  dmcchunk.py
BadAppleSrc/audio/dpcm16kb/: BadAppleSongMapped.dmc12  BadAppleSongMapped.dmc13  BadAppleSongMapped.dmc3  BadAppleSongMapped.dmc4  BadAppleSongMapped.dmc5  BadAppleSongMapped.dmc6  BadAppleSongMapped.dmca1  BadAppleSongMapped.dmca10  BadAppleSongMapped.dmca11  BadAppleSongMapped.dmca2  BadAppleSongMapped.dmca7  BadAppleSongMapped.dmca8  BadAppleSongMapped.dmca9
BadAppleSrc/audio/dpcmchunks/: BadAppleSongMapped.dmc0  BadAppleSongMapped.dmc1  BadAppleSongMapped.dmc10  BadAppleSongMapped.dmc11  BadAppleSongMapped.dmc12  BadAppleSongMapped.dmc13  BadAppleSongMapped.dmc14  BadAppleSongMapped.dmc15  BadAppleSongMapped.dmc16  BadAppleSongMapped.dmc17  BadAppleSongMapped.dmc18  BadAppleSongMapped.dmc19  BadAppleSongMapped.dmc2  BadAppleSongMapped.dmc20  BadAppleSongMapped.dmc21  BadAppleSongMapped.dmc22  BadAppleSongMapped.dmc23  BadAppleSongMapped.dmc24  BadAppleSongMapped.dmc25  BadAppleSongMapped.dmc3  BadAppleSongMapped.dmc4  BadAppleSongMapped.dmc5  BadAppleSongMapped.dmc6  BadAppleSongMapped.dmc7  BadAppleSongMapped.dmc8  BadAppleSongMapped.dmc9
BadAppleSrc/audio/samples/: cymbalriser.dmc
hardware/: fp-lib-table  nes-cart.kicad_sym  picones.kicad_pcb  picones.kicad_pro  picones.kicad_sch  sym-lib-table
src/: BadApple.asm  config.cfg  famistudio_ca65.s  main.c  sm.pio
